atualizando layout da página

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-minimal
+
+title: Sistemas Operacionais
+description: Página da disciplina Sistemas Operacionais
+show_downloads: false
