--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
-theme: jekyll-theme-minimal
-
+theme: jekyll-swiss
+theme_color: white
+## jekyll-theme-minimal
 title: Sistemas Operacionais
 description: Página da disciplina Sistemas Operacionais
 show_downloads: false
+lang: pt-BR
