atualizando layout da página

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
-theme: jekyll-swiss
-theme_color: white
-## jekyll-theme-minimal
+theme: jekyll-theme-minimal
+# theme: jekyll-swiss
+# theme_color: white
+#
 title: Sistemas Operacionais
 description: Página da disciplina Sistemas Operacionais
 show_downloads: false
