slides de concorrência

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ theme: jekyll-theme-minimal
 # theme_color: white
 #
 title: Sistemas Operacionais
-description: Página da disciplina Sistemas Operacionais
+description: Página da disciplina de Sistemas Operacionais
 show_downloads: false
 lang: pt-BR
